--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,16 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_launcher_icons: ^0.13.1
+
   flutter_lints: ^2.0.0
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/app_icon.png"
+  web:
+    generate: true
 
 flutter:
 
